# libaccounts-glib

./: .gitignore  .gitlab-ci.yml  Makefile.am  Makefile.am.coverage  NEWS  README.md  accounts.conf.in  autogen.sh  configure.ac  libaccounts-glib.pc.in
debian/: changelog  control  gir1.2-accounts-1.0.install  libaccounts-glib-dev.install  rules
debian/patches/: 0001-Tests-allow-some-time-for-D-Bus-signals-to-arrive.patch  series
docs/reference/: Makefile.am  application-file-format.xml  libaccounts-glib-docs.sgml  libaccounts-glib-docs.xml  libaccounts-glib-sections.txt  provider-file-format.xml  service-file-format.xml  service-type-file-format.xml  validating-xml-files.xml
libaccounts-glib/: Makefile.am  accounts-glib.h  accounts-provider.dtd  accounts.vapi  ag-account-service.c  ag-account-service.h  ag-account.c  ag-account.h  ag-application.c  ag-application.h  ag-auth-data.c  ag-auth-data.h  ag-debug.c  ag-debug.h  ag-errors.h  ag-internals.h  ag-manager.c  ag-manager.h  ag-provider.c  ag-provider.h  ag-service-type.c  ag-service-type.h  ag-service.c  ag-service.h  ag-types.h  ag-util.c  ag-util.h  com.google.code.AccountsSSO.Accounts.Manager.xml  libaccounts-glib.h  libaccounts-glib.vapi
m4/: gcov.m4
pygobject/: Accounts.py  Makefile.am
rpm/: libaccounts-glib.changes  libaccounts-glib.spec
tests/: .gitignore  Makefile.am  MyProvider.provider  MyService.service  OtherService.service  accounts-glib-test-wrapper.sh  accounts-glib-test.sh  accounts-glib-test.sh.in  check_ag.c  e-mail.service-type  maemo.provider  test-process.c  tests.xml  xml-dtd-validate.sh
tests/data/: Makefile.am
tests/data/accounts/applications/: Mailer.application
tests/data/accounts/providers/fake-os/: MyProvider.provider
tools/: .gitignore  Makefile.am  backup.c  main.c
