nobase_dist_testdata_DATA = \
	accounts/applications/Gallery.application \
	accounts/applications/Mailer.application \
	accounts/providers/MyProvider.provider \
	accounts/providers/fake-os/MyProvider.provider \
	accounts/providers/maemo.provider \
	accounts/service-types/e-mail.service-type \
	accounts/services/MyService.service \
	accounts/services/MyService2.service \
	accounts/services/OtherService.service \
	applications/Mailer.desktop
